lintian-brush (0.97) UNRELEASED; urgency=medium

  * Drop DEB_LDFLAGS_MAINT_APPEND ratther than leaving it empty.
  * Add fixer for obsolete-url-in-packaging.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 15 Feb 2021 23:18:33 +0000

lintian-brush (0.96) unstable; urgency=medium

  * Add fixer for debian-rules-uses-special-shell-variable.
  * Depend on newer version of debmutate, fixing maintscript
    manipulation.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 15 Feb 2021 19:24:59 +0000

lintian-brush (0.95) unstable; urgency=medium

  * Add fixer for debian-rules-uses-as-needed-linker-flag.
  * Use rules module from debmutate.
  * deb-scrub-obsolete: don't edit build dependencies for cdbs packages.
    Closes: #981528
  * Explicitly depend on now-split-out upstream-ontologist package.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 13 Feb 2021 01:03:17 +0000

lintian-brush (0.94) unstable; urgency=medium

  * debhelper-but-no-misc-depends: Also handle debhelper-compat.
  * Strip superfluous commas.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 27 Jan 2021 00:36:32 +0000

lintian-brush (0.93) unstable; urgency=medium

  * Improve locking for bzr branches.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 20 Jan 2021 21:55:38 +0000

lintian-brush (0.92) unstable; urgency=medium

  * Handle multiple instances of Reference: field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 05 Jan 2021 22:22:44 +0000

lintian-brush (0.91) unstable; urgency=medium

  * Bump minimum version of debmutate.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 04 Jan 2021 15:49:19 +0000

lintian-brush (0.90) unstable; urgency=medium

  * Fix use of deb-scrub-obsolete, and add test. Closes: #978982

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 01 Jan 2021 17:58:57 +0000

lintian-brush (0.89) unstable; urgency=medium

  * Add dependency on newer lintian - required for successful test runs.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 13 Dec 2020 20:02:09 +0000
